# target_audience_segmentation_crew

./: README.md  env  pyproject.toml
src/target_audience_segmentation_crew/: crew.py  main.py
src/target_audience_segmentation_crew/config/: agents.yaml  tasks.yaml
